# codecounter

./: .gitignore  CMakeLists.txt
src/: codecounter.c
tests/: CMakeLists.txt
